[ADD] user required to have upkeep fingerprint report
* improve view to speed up report.

[ADD] BPJS report

* To Do: salary rule's bpjs should be checked.

[FIX] KHL employee data (company/nik) might be changed during period

* fix error when open upkeep labour's attendance return recordset collections

[FIX] error at demo data

* Use &lt; instead of <=

[FIX] domain not complete

* new recordset with attendance code ratio = 1 failed to save.

[ADD] it has division, estate and company filter yet.

[ADD] User required upkeep vs fingerprint report

--- a/estate_payroll/views/inherited_hr_payroll_view.xml
+++ b/estate_payroll/views/inherited_hr_payroll_view.xml
@@ -62,6 +62,21 @@
             </field>
         </record>
 
+        <record id="inherited_hr_salary_rule_form" model="ir.ui.view">
+            <field name="name">hr.salary.rule.form.inherit</field>
+            <field name="model">hr.salary.rule</field>
+            <field name="inherit_id" ref="hr_payroll.hr_salary_rule_form"/>
+            <field name="arch" type="xml">
+              <xpath expr="/form/notebook" position="inside">
+                    <page string="Payroll">
+                        <group colspan="4">
+                            <field name="bpjs" />
+                        </group>
+                    </page>
+                </xpath>
+            </field>
+        </record>
+
         <act_window name="Payslip Upkeep Labour Details"
                     context="{'default_employee_id': active_id}"
                     res_model="estate.upkeep.labour"
