[FIX] purchase_indonesia : fix bug picking cannot validate after force_down

--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -134,7 +134,7 @@
                  <xpath expr="//button[@name='%(purchase_requisition.action_purchase_requisition_partner)d']" position="replace">
                          <button name="%(purchase_requisition.action_purchase_requisition_partner)d" type="action"
                         string="Request a Quotation" icon="fa-cogs"
-                        attrs="{'invisible': [('validation_correction','=',False),('state','in',['draft','done','closed'])]}"/>
+                        attrs="{'invisible': [('validation_correction','=',False)]}"/>
                  </xpath>
 
                  <xpath expr="//button[@name='%(purchase_requisition.action_purchase_requisition_partner)d']" position="after">
