--- a/hr_fingerprint_ams/wizard/fingerprint_transient_view.xml
+++ b/hr_fingerprint_ams/wizard/fingerprint_transient_view.xml
@@ -17,6 +17,7 @@
                         <group>
                             <field name="company_id"/>
                             <field name="estate_id"/>
+                            <field name="assistant_id"/>
                         </group>
                     </group>
                     <footer>
