--- a/purchase_indonesia/views/view_validate_tracking_purchase_order_invoice.xml
+++ b/purchase_indonesia/views/view_validate_tracking_purchase_order_invoice.xml
@@ -2,55 +2,43 @@
     <data>
         <record model="ir.ui.view" id="view_validate_tracking_purchase_order_invoice_tree">
              <field name="name">View Result Progress Purchase Order</field>
-             <field name="model">result.tracking.purchase.order</field>
+             <field name="model">view.request.requisition.tracking</field>
              <field name="priority" eval="1"/>
              <field name="arch" type="xml">
-                <tree string="Tracking Purchase Order" decoration-danger="status_pp=='PP Outstanding'">
+                <tree string="Tracking Purchase Order" decoration-danger="'status_invoice' ,'=', 'in Progress'">
                     <field name="id" invisible="1"/>
-                    <field name="requisition_id" string="Tender No"/>
-                    <field name="product_id" string="Product" />
-                    <field name="status_pp" string="Status PP"/>
-                    <field name="progress_po" string="Status PO"/>
-                    <field name="progress_picking" string="Status Picking" readonly="1"/>
-                    <field name="progress_invoice" string="Status Invoice"/>
+                    <field name="complete_name" string="Purchase Request/PP No"/>
+                    <field name="status_po" string="Status PO"/>
+                    <field name="status_picking" string="Status Picking" readonly="1"/>
+                    <field name="status_invoice" string="Status Invoice"/>
                 </tree>
              </field>
          </record>
 
         <record id="view_validate_tracking_purchase_order_invoice_form" model="ir.ui.view">
             <field name="name">View Result Progress Purchase Order</field>
-            <field name="model">result.tracking.purchase.order</field>
+            <field name="model">view.request.requisition.tracking</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
                         <div class="oe_title" colors="blue">
                              <h1>
-                                 <label string="Result Progress PO"/>
+                                 <label string="Result Progress PP"/>
                              </h1>
-                         </div>
-                            <group col = '2'>
-                                 <group>
-                                     <field name="id" invisible="1"/>
-                                     <field name="date_report" readonly="1"/>
-                                     <field name="requisition_id" string="Tender No" readonly="1"/>
-                                     <field name="status_pp" string="Status PP" readonly="1"/>
-                                </group>
-                                <group>
-                                    <field name="progress_po" string="Status PO" readonly="1"/>
-                                    <field name="progress_picking" string="Status Picking" readonly="1"/>
-                                    <field name="progress_invoice" string="Status Invoice" readonly="1"/>
-                                </group>
-
-                            </group>
-                            <separator string="Detail Progress"/>
-                             <group>
-                                    <field name="product_id" string="Product" readonly="1"/>
-                                    <field name="sum_quantity_tender" string="Quantity Tender" readonly="1"/>
-                                    <field name="sum_quantity_purchase" string="Quantity Purchase" readonly="1"/>
-                                    <field name="sum_quantity_picking" string="Quantity Picking" readonly="1"/>
-                                    <field name="sum_quantity_invoice" string="Quantity Invoice" readonly="1"/>
-                             </group>
+                        </div>
+                        <group>
+                            <field name="complete_name" string="Purchase Request/PP No"/>
+                        </group>
+                        <separator string="Detail Progress"/>
+                        <field name="detail_ids">
+                            <tree>
+                                <field name="product_id" string="Product" readonly="1"/>
+                                <field name="progress_po" string="Status PO" readonly="1"/>
+                                <field name="progress_picking" string="Status Picking" readonly="1"/>
+                                <field name="progress_invoice" string="Status Invoice" readonly="1"/>
+                            </tree>
+                        </field>
                     </sheet>
                 </form>
             </field>
@@ -58,18 +46,18 @@
 
         <record id="view_validate_tracking_purchase_order_invoice_search" model="ir.ui.view">
             <field name="name">View Result Progress Purchase Order</field>
-            <field name="model">result.tracking.purchase.order</field>
+            <field name="model">view.request.requisition.tracking</field>
             <field name="arch" type="xml">
                 <search string="Search Quotation Comparison Form">
                     <field name="requisition_id" string="Tender No"/>
-                    <field name="product_id" string="Product"/>
+                    <field name="complete_name" string="PP No"/>
                     <separator/>
-                    <filter name="status_pp" string="Status PP Outstanding"
-                            domain="[('status_pp','=','PP Outstanding')]"
-                            />
-                    <filter name="status_pp_close" string="Status PP Closed"
-                            domain="[('status_pp','=','PP Closed')]"
-                            />
+                    <!--<filter name="status_pp" string="Status PP Outstanding"-->
+                            <!--domain="[('status_pp','=','PP Outstanding')]"-->
+                            <!--/>-->
+                    <!--<filter name="status_pp_close" string="Status PP Closed"-->
+                            <!--domain="[('status_pp','=','PP Closed')]"-->
+                            <!--/>-->
                 </search>
             </field>
         </record>
@@ -77,7 +65,7 @@
         <record model="ir.actions.act_window" id="view_validate_tracking_purchase_order_invoice_action">
             <field name="name">Action Result Progress PP</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">result.tracking.purchase.order</field>
+            <field name="res_model">view.request.requisition.tracking</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
             <field name="search_view_id" ref="view_validate_tracking_purchase_order_invoice_search"/>
