--- a/purchase_indonesia/views/mail_template_purchase.xml
+++ b/purchase_indonesia/views/mail_template_purchase.xml
@@ -53,4 +53,31 @@
 	  </field>
        </record>
     </data>
+
+    <data noupdate="0">
+        <record id="email_template_stock_picking" model="mail.template">
+          <field name="name">Email Template Stock Picking</field>
+          <field name="email_from">admin@palmagroup.co.id</field>
+          <field name="subject">Approval GRN / SRN  To ${object.assigned_to.name}</field>
+          <field name="email_to">${object.assigned_to.login}</field>
+          <field name="lang">${object.lang}</field>
+          <field name="model_id" ref="stock.model_stock_picking"/>
+          <field name="auto_delete" eval="True"/>
+	  <field name="body_html">
+            <![CDATA[
+	      <p>Dear ${(object.assigned_to.name)},<br/><br/>
+	      You have one approval GRN / SRN <br/>
+
+	      Please Check This Link  :<br/>
+
+	      ${(object.web_url())}/web?db=${(object.database())}#id=${(object.id)}&view_type=form&model=${(object.email_model())}
+
+	      </p>
+
+              Regards,<br/>
+              ${(object.company_id.name)}
+	    ]]>
+	  </field>
+       </record>
+    </data>
 </odoo>
