--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -183,11 +183,12 @@
         <record id="fingerprint_attendance_action" model="ir.actions.act_window" >
             <field name="name">Fingerprint Attendance</field>
             <field name="res_model">hr_fingerprint_ams.attendance</field>
-            <field name="view_mode">pivot,tree,form</field>
+            <field name="view_mode">tree,form,pivot</field>
             <field name="groups_id" eval="[(4, ref('base.group_hr_user')),(4, ref('estate.group_user'))]"/>
             <field name="context">{'search_default_by_department': 1,
                 'search_default_by_employee': 1,
-                'search_default_filter_new': 1}</field>
+                'search_default_filter_new': 1,
+                'search_default_filter_month': 1}</field>
         </record>
 
         <menuitem id="fingerprint_attendance" name="Fingerprint Attendance"
