--- a/purchase_indonesia/views/mail_template_purchase.xml
+++ b/purchase_indonesia/views/mail_template_purchase.xml
@@ -11,7 +11,7 @@
 	  <field name="body_html">
             <![CDATA[
             <style>
-             input[type="submit"]{border:none; background:#f5f5f7; color:#ACCC6C}
+             input[type="submit"]{background:#f5f5f7; color:#ACCC6C}
             </style>
 	      <p>Dear ${(object.assigned_to.name)},<br/>
 	      <br/>
@@ -20,9 +20,50 @@
           <br/>
 
           <p>
-	        With Detail:
+	        With Detail And Summary:
             <br/>
             Requested By , ${(object.requested_by.name)}
+
+            <br/>
+
+            <table class="table table-striped table-condensed table-bordered">
+                <tr class="label_table_header">
+                    <th>
+                      Barang/Jasa
+                    </th>
+                    <th>
+                      Jumlah
+                    </th>
+                    <th>
+                      Harga Perkiraan per Satuan
+                    </th>
+                    <th>
+                      Total Perkiraan Harga
+                    </th>
+                </tr>
+                % for item in object.line_ids:
+                <tr>
+                    <td>
+                        <span>${item.product_id.name}</span>
+                    </td>
+                    <td>
+                        <span>${item.product_qty}</span>
+                    </td>
+                    <td>
+                        <span>${item.price_per_product}</span>
+                    </td>
+
+                   <td>
+                        <span>${item.total_price}</span>
+                    </td>
+                </tr>
+                % endfor
+            </table>
+          <br/>
+
+          <p>Total Estimated Price, ${(object.total_estimate_price)}</p>
+
+	      <br/>
 	      </p>
 
           <p>
@@ -30,7 +71,6 @@
 	      </p>
 
 	      <br/>
-
 
 	      </p>
 
